--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,5 +9,5 @@ jobs:
         with:
           args: "format=svg outputDir=./build/"
         env:
-          FIGMA_FILE_URL: "https://www.figma.com/file/2ruSnPauajQGprFy6K333u/Desktop-Components?node-id=0%3A1"
+          FIGMA_FILE_URL: "https://www.figma.com/file/2ruSnPauajQGprFy6K333u/Desktop-Components"
           FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
